--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,19 +5,21 @@ services:
       build:
          context: .
          dockerfile: Dockerfile
+      env_file: .env
       command: npm start
-      volumes:
-        - ./www:/usr/src/app
+      working_dir: "/app/backend"
       expose:
-        - "3000"
+        - 3000
+      ports:
+        - "3000:3000"
+
     nginx:
       image: nginx:latest
       container_name: Nginx-NodeJS
       ports:
         - '80:80'
       volumes:
-        - ./default.conf:/etc/nginx/conf.d/default.conf
-        - ./www:/usr/share/nginx/html
+        - ./etc/nginx/conf.d
       depends_on:
         - nodejs
       links:
