--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "jsonwebtoken": "^9.0.2",
     "jwt-simple": "^0.5.6",
     "mongoose": "^8.0.4",
-    "nodemailer": "^6.9.9",
+    "ngrok": "^5.0.0-beta.2",
+    "nodemailer": "^6.9.14"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.0"
   }
 }
